--- a/htmls/index.html
+++ b/htmls/index.html
@@ -21,12 +21,12 @@
 
             <!-- Customized Bootstrap Stylesheet -->
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-            <link href="/css/bootstrap.min.css" rel="stylesheet">
+            <link href="css/bootstrap.min.css" rel="stylesheet">
 
             <!-- my style sheet -->
-            <link href="/css/style.css" rel="stylesheet">
+            <link href="css/style.css" rel="stylesheet">
             <title> Betadata</title>
-            <link class="bg-primary" rel="icon" type="image/x-icon" href="/images/atom.png">
+            <link class="bg-primary" rel="icon" type="image/x-icon" href="images/atom.png">
                     
         </head>
         <body>
@@ -69,7 +69,7 @@
                 <div class="carousel slide carousel-fade" id="header-carousel" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="w-100 px-2 py-0" src="/images/img-1.jpeg" alt="Image">
+                            <img class="w-100 px-2 py-0" src="images/img-1.jpeg" alt="Image">
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 900px;">
                                     <h5 class="text-white fw-bold mb-3 fw-bold animated slideInDown">Welcome to Betadata</h5>
@@ -80,7 +80,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="w-100" src="/images/img-2.jpg" alt="Image">
+                            <img class="w-100" src="images/img-2.jpg" alt="Image">
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 900px;">
                                     <h5 class="text-white  mb-3 animated slideInDown">Welcome to Betadata</h5>
@@ -114,7 +114,7 @@
                                     <h1 class="m-0 text-white "><i class="fa fa-atom me-2 rounded-circle"></i>Betadata</h1>
                                 </a> 
                                 <a href="portforlio.html">
-                                    <img style="width: 50%; height:auto; border-radius: 10%" src="/images/richie.jpg" alt="Developer">
+                                    <img style="width: 50%; height:auto; border-radius: 10%" src="images/richie.jpg" alt="Developer">
                                 </a>
                             </div>
                         </div>
