--- a/htmls/Home.html
+++ b/htmls/Home.html
@@ -137,7 +137,7 @@
                                         <p class="mb-0">+254 705907200</p>
                                     </div>
                                     <div class="d-flex mt-4">
-                                        <a class="btn btn-primary btn-square mx-2" href="www.twitter.com"><i class="fab fa-twitter fw-normal"></i></a>
+                                        <a class=" btn-primary btn-square mx-2" href="www.twitter.com"><i class="fab fa-twitter fw-normal"></i></a>
                                         <a class="btn btn-primary btn-square me-2" href="www.facebook.com"><i class="fab fa-facebook-f fw-normal"></i></a>
                                         <a class="btn btn-primary btn-square me-2" href="www.linkedin.com"><i class="fab fa-linkedin-in fw-normal"></i></a>
                                         <a class="btn btn-primary btn-square" href="https//instergram.com"><i class="fab fa-instagram fw-normal"></i></a>
