--- a/htmls/Home.html
+++ b/htmls/Home.html
@@ -44,7 +44,7 @@
             <!--Navigation bar and carousel starts here-->
             <div class="container-fluid position-relative p-0">
                 <nav class="navbar navbar-expand-lg  navbar-light px-4 px-sm-4 py-2 py-lg-2">
-                    <a href="index.html"  class="navbar-brand p-0">
+                    <a href="Home.html"  class="navbar-brand p-0">
                         <h1 class="m-0 fw-bold text-white"><i class="fa fa-atom me-2 rounded-circle "></i>Betadata</h1>
                     </a>
                     <button class="navbar-toggler sm-justify-content-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"> 
@@ -54,12 +54,12 @@
                         <div class="collapse navbar-collapse" id="navbar">
                             <div class="navbar-nav ms-auto py-0">
                                 <div class="collapse navbar-collapse" id="navbar">
-                                <a class="nav-item nav-link text-white" href="portforlio.html">Portfolio</a>
-                                <a class="nav-item nav-link text-white" href="about.html">About</a>
-                                <a class="nav-item nav-link text-white" href="blog.html">Blog</a>
-                                <a class="nav-item nav-link text-white" href="tech.html">Tech</a>
-                                <a class="nav-item nav-link text-white" href="contact.html">Contact</a>
-                                <a class="nav-item nav-link text-white" href="service.html">Services</a>
+                                <a class="nav-item nav-link text-white" href="Portfolio.html">Portfolio</a>
+                                <a class="nav-item nav-link text-white" href="About.html">About</a>
+                                <a class="nav-item nav-link text-white" href="Blog.html">Blog</a>
+                                <a class="nav-item nav-link text-white" href="Tech.html">Tech</a>
+                                <a class="nav-item nav-link text-white" href="Contact.html">Contact</a>
+                                <a class="nav-item nav-link text-white" href="Service.html">Services</a>
 
                             </div>
                         </div>
@@ -74,7 +74,7 @@
                                 <div class="p-3" style="max-width: 900px;">
                                     <h5 class="text-white fw-bold mb-3 fw-bold animated slideInDown">Welcome to Betadata</h5>
                                     <h1 class="display-1 text-white mb-md-4 animated zoomIn">Striving to be the best</h1>
-                                    <a href="quote.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Learn more</a>
+                                    <a href="Quote.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Learn more</a>
                                     <a href="" class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight">Contact Me</a>
                                 </div>
                             </div>
@@ -85,7 +85,7 @@
                                 <div class="p-3" style="max-width: 900px;">
                                     <h5 class="text-white  mb-3 animated slideInDown">Welcome to Betadata</h5>
                                     <h1 class="display-1 text-white mb-md-4 animated zoomIn">Striving to be the best</h1>
-                                    <a href="quote.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Learn More</a>
+                                    <a href="Quote.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Learn More</a>
                                     <a href="" class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight">Contact Me</a>
                                 </div>
                             </div>
@@ -110,10 +110,10 @@
                     <div class="row gx-5">
                         <div class="col-lg-4 col-md-6 footer-about">
                             <div class="d-flex mt-3 flex-column align-items-center justify-content-center text-center  p-3">
-                                <a href="index.html" class="navbar-brand">
+                                <a href="Home.html" class="navbar-brand">
                                     <h1 class="m-0 text-white "><i class="fa fa-atom me-2 rounded-circle"></i>Betadata</h1>
                                 </a> 
-                                <a href="portforlio.html">
+                                <a href="Portfolio.html">
                                     <img style="width: 50%; height:auto; border-radius: 10%" src="images/richie.jpg" alt="Developer">
                                 </a>
                             </div>
@@ -149,11 +149,11 @@
                                     </div>
                                     <div class="link-animated d-flex flex-column justify-content-start">
                                         <a class="text-light mb-2" href="#"><i class=" text-primary me-2"></i>Home</a>
-                                        <a class="text-light mb-2" href="about.html"><i class=" text-primary me-2"></i>About Us</a>
+                                        <a class="text-light mb-2" href="About.html"><i class=" text-primary me-2"></i>About Us</a>
                                         <a class="text-light mb-2" href="#"><i class="text-primary me-2"></i>Our Services</a>
-                                        <a class="text-light mb-2" href="blog.html"><i class=" text-primary me-2"></i>Meet The Team</a>
+                                        <a class="text-light mb-2" href="Blog.html"><i class=" text-primary me-2"></i>Meet The Team</a>
                                         <a class="text-light mb-2" href="#"><i class="text-primary me-2"></i>Latest Blog</a>
-                                        <a class="text-light" href="contact.html"><i class=" text-primary me-2"></i>Contact Us</a>
+                                        <a class="text-light" href="Contact.html"><i class=" text-primary me-2"></i>Contact Us</a>
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
